--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,25 +1,32 @@
 .wrapper {
     display: flex;
-    height: 100vh; /* Full height of the viewport */
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
 }
 
 .modal-container {
-    flex: 1; /* Modal container takes half of the screen */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%; /* Take up all the height */
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    right: 20%;
+    z-index: 1; /* Set higher z-index to ensure it's on top */
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
-.container {
-    flex: 1; /* Image container takes half of the screen */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%; /* Take up all the height */
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./pexels-ricky-esquivel-1683490.jpg'); /* Path to your background image */
+    background-size: cover;
+    background-position: center;
+    z-index: -1; /* Ensure it's behind other content */
 }
