--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,6 @@
     <div id="root"></div> <!-- This is where your React app will be rendered -->
 
     <!-- Load the React bundle -->
-    <script src="{{ url_for('static', filename='app.js') }}"></script>
+    <script src="{{ url_for('static', filename='App.js') }}"></script>
 </body>
 </html>
